# Video-recommendation

./: .gitignore  README.md
Backend/crow/: CMakeLists.txt
Backend/video_algo/: CMakeLists.txt  graph.h  main.cpp  splay.h
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.jsx
Frontend/src/components/: header.jsx
Frontend/src/pages/: data.json  home.jsx  video.jsx
